# python-project-83

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  database.sql  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: app.py
page_analyzer/templates/: 404.html  index.html  url_page.html  urls.html
page_analyzer/templates/layouts/: layout.html
