[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Olga <osoldko@ntv.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^23.0.0"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
